Fix user name and avatar alignment in navbar

--- a/src/styles/theme/navigation.scss
+++ b/src/styles/theme/navigation.scss
@@ -337,6 +337,9 @@
   }
 
   .user {
+	display: flex;
+	align-items: center;
+
     span {
       font-family: $vikunja-font;
     }
